fix(styles): add z-index for MobileMenu

--- a/src/components/shared/mobile-menu/mobile-menu.module.scss
+++ b/src/components/shared/mobile-menu/mobile-menu.module.scss
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 2;
   overflow-y: auto;
   visibility: hidden;
   transition-duration: $transition-base;
